...
      note: json['note'] as String?,
    );
  }
}

abstract class Task {
  Task(this.type);

  final String type;

  factory Task.fromJson(Map<String, dynamic> json) {
    final type = (json['type'] as String?)?.toLowerCase();
    switch (type) {
...
